Language support started

--- a/app/translations/no.json
+++ b/app/translations/no.json
@@ -1,4 +1,39 @@
 {
     "ADDRESS": "Adresse",
-    "YOUTH_SOCKS": "Ungdom sokker"
+    "YOUTH_SOCKS": "Ungdom sokker",
+    "MIK_SOCK": "Mik Sokker",
+    "MAIN_PAGE": "Hjem" ,
+    "OFFER": "Tillbud" ,
+    "ABOUT_COMPANY": "Om oss" ,
+    "CONTACT": "Kontakt oss" ,
+    "SOCK_FROM_A_TO_Z": "Sokker fra A til Æ" ,
+    "SEE_NEWEST_OFFER": "NYE PRODUKTER" ,
+    "JOIN_HAPPY_CUSTEMERS": "Bli medlemm" ,
+    "FROM_YEAR_1989": "I drift fra 1989" ,
+    "COMPANY_DZIEWIARSTWO_MASZYNOWE_MIECZYSLAW_KLIMCZAK_EXIST_FROM_1989": "Tekstil Selskapet Mieczysław Klimczak er i drift fra 1989." ,
+    "LEARN_MORE": "FINN UT MER" ,
+    "Dziewiarstwo Maszynowe Mieczysław Klimczak": "Mieczysław Klimczak Tekstil" ,
+    "EXIST_ON_MARKET_FROM_1989": "i drift siden 1989." ,
+    "Od tego czasu nasze skarpety zdobyły sympatie wielu ludzi z całej Polski, dzięki najwyższej jakości przędzy(bawełny czesanskowej oraz włókna bambusowego) używanej do wyrobu naszych produktów. Szeroki asortyment wzorów i kolorów oraz możliwości wyboru rozmiaru skarpet pozwala nam trafić w gust każdego klienta.": "Takk til god kvalitet av våre tekstil produkter (kamgarn bomull og bambus fiber) brukt til å produsere våre produkter, siden 1989 har vi fått mange fornøyde kunder i Polen og andre land i Europa." ,
+    "": "Et stort utvalg av mønstre og farger hjelper oss til å møte alle kundens behov.",
+    "SUIT_SOCK": "Dress Sokker",
+    "SOCK_PERFECT_TO_SUIT": "Ideelle Dress Sokker",
+    "MADE_OF_HIGH_QUALITY_YARN": "Produsert av kamgarn bomull",
+    "TRUE_CONFORT_AND_ELEGANT": "Ekte komfort og eleganse",
+    "AVAILABLE_IN_MULTIPLE_COLORS": "Stort utvalg av farger",
+    "Płaski szew i szeroki nieuciskający ściągacz.": "Flat søm forårsaker ingen klemming og brede ribbing",
+    "10_IN_PACK": "10 par i pakken",
+    "Skarpety Awangarda.": "Avant-garde Sokker",
+    "Szyk i moda.": "Chic og mote",
+    "Skarpety Bambusowe": "Bambus Sokker",
+    "Skarpety z jonami srebra.": "Sokker med sølvioner",
+    "Wykonane z wysokiej jakości przędzy bambusowej.": "Laget av høy kvalitet bambus garn",
+    "Właściwości antybakteryjne i antypotne.": "Antibakteriell, fremkaller ikke svett",
+    "Dostępne w różnych kolorach.": "Stort utvalg av farger",
+    "Skarpety Sportowe.": "Sport Sokker",
+    "Skarpety sportowe klasyczne.": "Klassiske Sport Sokker",
+    "PERFECT_FOR_ACTIVE_PEOPLE": "Ideell for aktive mennesker",
+    "Płaski szew.": "Flat søm",
+    "Stopki dwukolorowe.": "Korte sokker i to farger",
+    "Stopki dla każdego.": "Korte sokker til alle"
 }
