--- a/app/translations/no.json
+++ b/app/translations/no.json
@@ -1,5 +1,36 @@
 {
-    // Menu
+    "Main Page": "Strona główna",
+    "Offer": "Oferta",
+    "About company": "O firmie",
+    "Contact": "Kontakt",
+    "Change language": "Zmień język",
+
+    "Sock from A to Z": "Skarpety od A do Z",
+    "See newest offer": "Zobacz najnowszą ofertę",
+    "Join the group of satisfied customers": "Dołącz do grona zadowolonych klientów",
+    "since 1989": "od 1989 roku",
+    "Company Dziewiarstwo Maszynowe Mieczysław Klimczak exists on market since 1989.": "Firma Dziewiarstwo Maszynowe Mieczysław Klimczak istnieje na rynku od 1989 roku.",
+    "Learn more": "Dowiedz się wiecej",
+
+    "Amount in package": "Ilość w paczce",
+
+    "Suit Socks": "Skarpety Garniturowe",
+    "Van Socks": "Skarpety Awangarda",
+    "Bamboo Socks": "Skarpety Bambusowe",
+
+    "Men": "Męskie",
+    "Women": "Damskie",
+    "Sport": "Sportowe",
+    
+    "Socks ideal for a suit and not only.": "Skarpety idealne do garnituru i nie tylko.",
+    "Made from high quality combed cotton.": "Wykonane z wysokiej jakości bawełny czesankowej.",
+    "True comfort and elegance.": "Prawdziwa wygoda i elegancja.",
+    "Available in rich colors.": "Dostępne w bogatej kolorystyce.",
+    "Flat seam and wide ribbing causing no pinching.": "Płaski szew i szeroki nieuciskający ściągacz.",
+    "Socks with silver ions.Socks with silver ions.": "Skarpety z jonami srebra.",
+    "Made of high quality bamboo yarn.": "Wykonane z wysokiej jakości przędzy bambusowej.",
+
+    "": "",
     "Main Page": "Hjem", 
     
     "Address": "Adresse",
