--- a/app/translations/pl.json
+++ b/app/translations/pl.json
@@ -21,7 +21,9 @@
     "Men": "Męskie",
     "Women": "Damskie",
     "Sport": "Sportowe",
-    
+
+    "Go back": "Wróć",
+
     "Socks ideal for a suit and not only.": "Skarpety idealne do garnituru i nie tylko.",
     "Made from high quality combed cotton.": "Wykonane z wysokiej jakości bawełny czesankowej.",
     "True comfort and elegance.": "Prawdziwa wygoda i elegancja.",
