Colors added, templates improved

--- a/app/translations/no.json
+++ b/app/translations/no.json
@@ -8,7 +8,7 @@
     "Sock from A to Z": "Skarpety od A do Z",
     "See newest offer": "Zobacz najnowszą ofertę",
     "Join the group of satisfied customers": "Dołącz do grona zadowolonych klientów",
-    "since 1989": "od 1989 roku",
+    "exists since 1989": "od 1989 roku",
     "Company Dziewiarstwo Maszynowe Mieczysław Klimczak exists on market since 1989.": "Firma Dziewiarstwo Maszynowe Mieczysław Klimczak istnieje na rynku od 1989 roku.",
     "Learn more": "Dowiedz się wiecej",
 
@@ -21,7 +21,7 @@
     "Men": "Męskie",
     "Women": "Damskie",
     "Sport": "Sportowe",
-    
+
     "Socks ideal for a suit and not only.": "Skarpety idealne do garnituru i nie tylko.",
     "Made from high quality combed cotton.": "Wykonane z wysokiej jakości bawełny czesankowej.",
     "True comfort and elegance.": "Prawdziwa wygoda i elegancja.",
@@ -31,8 +31,8 @@
     "Made of high quality bamboo yarn.": "Wykonane z wysokiej jakości przędzy bambusowej.",
 
     "": "",
-    "Main Page": "Hjem", 
-    
+    "Main Page": "Hjem",
+
     "Address": "Adresse",
     "YOUTH_SOCKS": "Ungdom sokker",
     "MIK_SOCK": "Mik Sokker",
