--- a/app/translations/pl.json
+++ b/app/translations/pl.json
@@ -8,15 +8,18 @@
     "Sock from A to Z": "Skarpety od A do Z",
     "See newest offer": "Zobacz najnowszą ofertę",
     "Join the group of satisfied customers": "Dołącz do grona zadowolonych klientów",
-    "since 1989": "od 1989 roku",
+    "exists since 1989": "od 1989 roku",
     "Company Dziewiarstwo Maszynowe Mieczysław Klimczak exists on market since 1989.": "Firma Dziewiarstwo Maszynowe Mieczysław Klimczak istnieje na rynku od 1989 roku.",
     "Learn more": "Dowiedz się wiecej",
 
     "Amount in package": "Ilość w paczce",
 
     "Suit Socks": "Skarpety Garniturowe",
+    "Men Socks": "Skarpety Męskie",
+    "Women Socks": "Skarpety Damskie",
     "Van Socks": "Skarpety Awangarda",
     "Bamboo Socks": "Skarpety Bambusowe",
+    "Category_7": "Podkolanówki/Zakolanówki",
 
     "Men": "Męskie",
     "Women": "Damskie",
@@ -31,6 +34,7 @@
     "Flat seam and wide ribbing causing no pinching.": "Płaski szew i szeroki nieuciskający ściągacz.",
     "Socks with silver ions.Socks with silver ions.": "Skarpety z jonami srebra.",
     "Made of high quality bamboo yarn.": "Wykonane z wysokiej jakości przędzy bambusowej.",
+    "Comfortable to wear.": "Wygodne w noszeniu.",
 
     "": ""
 }
