Norvegian translation updated

--- a/app/translations/no.json
+++ b/app/translations/no.json
@@ -1,73 +1,56 @@
 {
-    "Main Page": "Strona główna",
-    "Offer": "Oferta",
-    "About company": "O firmie",
+    "Main Page": "Hovedside",
+    "Offer": "Tilbud",
+    "About company": "Om oss",
     "Contact": "Kontakt",
-    "Change language": "Zmień język",
+    "Change language": "Endre språk",
 
-    "Sock from A to Z": "Skarpety od A do Z",
-    "See newest offer": "Zobacz najnowszą ofertę",
-    "Join the group of satisfied customers": "Dołącz do grona zadowolonych klientów",
-    "exists since 1989": "od 1989 roku",
-    "Company Dziewiarstwo Maszynowe Mieczysław Klimczak exists on market since 1989.": "Firma Dziewiarstwo Maszynowe Mieczysław Klimczak istnieje na rynku od 1989 roku.",
-    "Learn more": "Dowiedz się wiecej",
+    "Sock from A to Z": "Sokker fra A til Å",
+    "See newest offer": "Se nyeste tilbud",
+    "Join the group of satisfied customers": "Bli med i gruppen av fornøyde kunder",
+    "exists since 1989": "I drift siden 1989",
+    "Company Dziewiarstwo Maszynowe Mieczysław Klimczak exists on market since 1989.": "Selskapet Dziewiarstwo MASZYNOWE Mieczysław Klimczak eksisterer på markedet siden 1989",
+    "Learn more": "Finn ut mer ",
 
-    "Amount in package": "Ilość w paczce",
+    "Suit Socks": "Dress Sokker",
+    "Men Socks": "Herresokker",
+    "Women Socks": "Damesokker",
+    "Van Socks": "Van Sokker",
+    "Bamboo Socks": "Bambus Sokker",
+    "Category_7": "Halvstrømpe/Lårstrømpe",
 
-    "Suit Socks": "Skarpety Garniturowe",
-    "Van Socks": "Skarpety Awangarda",
-    "Bamboo Socks": "Skarpety Bambusowe",
+    "Men": "Menn",
+    "Women": "Kvinner",
+    "Sport": "Sport",
 
-    "Men": "Męskie",
-    "Women": "Damskie",
-    "Sport": "Sportowe",
+    "Amount in package": "Antall par i pakken",
+    "Go back": "Gå tilbake",
 
-    "Socks ideal for a suit and not only.": "Skarpety idealne do garnituru i nie tylko.",
-    "Made from high quality combed cotton.": "Wykonane z wysokiej jakości bawełny czesankowej.",
-    "True comfort and elegance.": "Prawdziwa wygoda i elegancja.",
-    "Available in rich colors.": "Dostępne w bogatej kolorystyce.",
-    "Flat seam and wide ribbing causing no pinching.": "Płaski szew i szeroki nieuciskający ściągacz.",
-    "Socks with silver ions.Socks with silver ions.": "Skarpety z jonami srebra.",
-    "Made of high quality bamboo yarn.": "Wykonane z wysokiej jakości przędzy bambusowej.",
+    "Perfectly fit suit.": "Passer perfekt til dress.",
+    "Socks ideal for a suit and not only.": "Sokker ideell til dress og annen bekledning.",
+    "Made from high quality combed cotton.": "Laget av høy kvalitet kjemmet bomull.",
+    "True comfort and elegance.": "Ekte komfort og eleganse",
+    "Available in rich colors.": "Sokkene fåes i ulike farger",
+    "Flat seam and wide ribbing causing no pinching.": "Flat søm og brede ribbing forårsaker ingen kniping",
+    "Socks with silver ions.Socks with silver ions.": "Sokker med sølvioner.",
+    "Made of high quality bamboo yarn.": "Laget av høy kvalitet bambus garn.",
+    "Comfortable to wear.": "Behagelig å ha på.",
+    "Flat seam.": "Flat søm.",
+    "Wide ribbing causing no pinching.": "Brede ribbing forårsaker ingen kniping",
 
-    "": "",
-    "Main Page": "Hjem",
+    "Black": "Svart",
+    "Gray": "Grå",
+    "Dark gray": "Mørkegrå",
+    "Dark jeans": "Marineblå",
+    "Jeans": "Jeans",
+    "Bronze": "Brun",
+    "Beige": "Beige",
+    "Graphite": "Grafitt",
+    "White": "Hvit",
 
-    "Address": "Adresse",
-    "YOUTH_SOCKS": "Ungdom sokker",
-    "MIK_SOCK": "Mik Sokker",
-    "MAIN_PAGE": "Hjem" ,
-    "OFFER": "Tillbud" ,
-    "ABOUT_COMPANY": "Om oss" ,
-    "CONTACT": "Kontakt oss" ,
-    "Sock from A to Z": "Sokker fra A til Æ" ,
-    "See newest offer": "NYE PRODUKTER" ,
-    "JOIN_HAPPY_CUSTEMERS": "Bli medlemm" ,
-    "FROM_YEAR_1989": "I drift fra 1989" ,
-    "COMPANY_DZIEWIARSTWO_MASZYNOWE_MIECZYSLAW_KLIMCZAK_EXIST_FROM_1989": "Tekstil Selskapet Mieczysław Klimczak er i drift fra 1989." ,
-    "LEARN_MORE": "FINN UT MER" ,
-    "Dziewiarstwo Maszynowe Mieczysław Klimczak": "Mieczysław Klimczak Tekstil" ,
-    "EXIST_ON_MARKET_FROM_1989": "i drift siden 1989." ,
-    "Od tego czasu nasze skarpety zdobyły sympatie wielu ludzi z całej Polski, dzięki najwyższej jakości przędzy(bawełny czesanskowej oraz włókna bambusowego) używanej do wyrobu naszych produktów. Szeroki asortyment wzorów i kolorów oraz możliwości wyboru rozmiaru skarpet pozwala nam trafić w gust każdego klienta.": "Takk til god kvalitet av våre tekstil produkter (kamgarn bomull og bambus fiber) brukt til å produsere våre produkter, siden 1989 har vi fått mange fornøyde kunder i Polen og andre land i Europa." ,
-    "": "Et stort utvalg av mønstre og farger hjelper oss til å møte alle kundens behov.",
-    "SUIT_SOCK": "Dress Sokker",
-    "SOCK_PERFECT_TO_SUIT": "Ideelle Dress Sokker",
-    "MADE_OF_HIGH_QUALITY_YARN": "Produsert av kamgarn bomull",
-    "TRUE_CONFORT_AND_ELEGANT": "Ekte komfort og eleganse",
-    "AVAILABLE_IN_MULTIPLE_COLORS": "Stort utvalg av farger",
-    "Płaski szew i szeroki nieuciskający ściągacz.": "Flat søm forårsaker ingen klemming og brede ribbing",
-    "10_IN_PACK": "10 par i pakken",
-    "Skarpety Awangarda.": "Avant-garde Sokker",
-    "Szyk i moda.": "Chic og mote",
-    "Skarpety Bambusowe": "Bambus Sokker",
-    "Skarpety z jonami srebra.": "Sokker med sølvioner",
-    "Wykonane z wysokiej jakości przędzy bambusowej.": "Laget av høy kvalitet bambus garn",
-    "Właściwości antybakteryjne i antypotne.": "Antibakteriell, fremkaller ikke svett",
-    "Dostępne w różnych kolorach.": "Stort utvalg av farger",
-    "Skarpety Sportowe.": "Sport Sokker",
-    "Skarpety sportowe klasyczne.": "Klassiske Sport Sokker",
-    "PERFECT_FOR_ACTIVE_PEOPLE": "Ideell for aktive mennesker",
-    "Płaski szew.": "Flat søm",
-    "Stopki dwukolorowe.": "Korte sokker i to farger",
-    "Stopki dla każdego.": "Korte sokker til alle"
+    "We declare thatProdukt europejski. the production of our socks are adhered to the law, in particular human rights.": "Vi erklærer at produksjonen av sokkene blir etterfulgt loven om særlig menneskerettigheter.",
+    "No children or minors work in the production.": "Ingen barn eller mindreårige arbeider i produksjonen.",
+    "The production is based on natural raw materials (cotton yarn and bamboo), which minimizes the negative impact on the environment.": "Produksjonen er basert på naturlige råvarer (bomullsgarn og bambus), noe som minimerer den negative innvirkningen på miljøet.",
+    "European product.": "Europeisk produkt.",
+    "Made in Poland.": "Produsert i Polen."
 }
