--- a/app/translations/no.json
+++ b/app/translations/no.json
@@ -48,7 +48,7 @@
     "Graphite": "Grafitt",
     "White": "Hvit",
 
-    "We declare thatProdukt europejski. the production of our socks are adhered to the law, in particular human rights.": "Vi erklærer at produksjonen av sokkene blir etterfulgt loven om særlig menneskerettigheter.",
+    "We declare that the production of our socks are adhered to the law, in particular human rights.": "Vi erklærer at produksjonen av sokkene blir etterfulgt loven om særlig menneskerettigheter.",
     "No children or minors work in the production.": "Ingen barn eller mindreårige arbeider i produksjonen.",
     "The production is based on natural raw materials (cotton yarn and bamboo), which minimizes the negative impact on the environment.": "Produksjonen er basert på naturlige råvarer (bomullsgarn og bambus), noe som minimerer den negative innvirkningen på miljøet.",
     "European product.": "Europeisk produkt.",
