--- a/app/translations/pl.json
+++ b/app/translations/pl.json
@@ -48,7 +48,7 @@
     "Graphite": "Grafitowy",
     "White": "Biały",
 
-    "We declare thatProdukt europejski. the production of our socks are adhered to the law, in particular human rights.": "Oświadczamy, że przy produkcji naszych skarpet są przestrzegane przepisy prawa, a w szczególności Prawa człowieka.",
+    "We declare that the production of our socks are adhered to the law, in particular human rights.": "Oświadczamy, że przy produkcji naszych skarpet są przestrzegane przepisy prawa, a w szczególności Prawa człowieka.",
     "No children or minors work in the production.": "Przy produkcji nie pracują dzieci, ani osoby nieletnie.",
     "The production is based on natural raw materials (cotton yarn and bamboo), which minimizes the negative impact on the environment.": "Produkcja oparta jest na surowcach naturalnych (przędza bawełniana i bambusowa), co minimalizuje negatywny wpływ na środowisko.",
     "European product.": "Produkt europejski.",
