--- a/app/translations/no.json
+++ b/app/translations/no.json
@@ -1,4 +1,4 @@
-﻿{
+{
     "Main Page": "Hovedside",
     "Offer": "Tilbud",
     "About company": "Om oss",
@@ -45,9 +45,10 @@
     "No children or minors work in the production.": "Ingen barn eller mindreårige arbeider i produksjonen.",
     "The production is based on natural raw materials (cotton yarn and bamboo), which minimizes the negative impact on the environment.": "Produksjonen er basert på naturlige råvarer (bomullsgarn og bambus), noe som minimerer den negative innvirkningen på miljøet.",
     "European product.": "Europeisk produkt.",
-    "Made in Poland.": "Produsert i Polen.""Address": "Adresse",
+    "Made in Poland.": "Produsert i Polen.",
+    "Address": "Adresse",
     "Phone number": "Telefonnummer",
-    "E-mail": "E-post""Category": "Kategori",
+    "Category": "Kategori",
     "All": "Alle",
     "Frotte": "Frotté",
     "Short": "Ankelsokker",
@@ -55,13 +56,10 @@
     "Knee": "Halvstrømpe/Lårstrømpe",
     "Pressure-free": "Pressfri",
     "Zobacz więcej": "Details",
-    "Wyświetla 36 z 36 dostepnych.": "Displays 36 of 36 available.",
     "Details": "Detaljer",
-    "Displays 36 of 36 available.": "Viser 36 av 36 tilgjengelige.",
-    "istnieje na rynku od 1989 roku.": "has been on the market since 1989.",
-    "Od tego czasu nasze skarpety zdobyły sympatie wielu ludzi z całej Polski, dzięki najwyższej jakości przędzy(bawełny czesanskowej oraz włókna bambusowego) używanej do wyrobu naszych produktów. Szeroki asortyment wzorów i kolorów oraz możliwość wyboru rozmiaru skarpet pozwala nam trafić w gust każdego klienta.": "Since that time, our socks won the sympathies of many people from all over Polish, thanks to the high quality of yarn (Combed cotton and bamboo fiber) used for the manufacture of our products. Wide range of patterns and colors, and the ability to choose the size of the socks allows us to hit the tastes of each client.",
-    "Korzystamy z nowoczesnych maszyn dziewiarskich produkcji włoskiej, co pozwala nam sprostać współczesnym trendom mody oraz zrealizować każde zamówienie.": "We use modern Italian manufacturing machinery, which allows us to meet today's fashion trends and realize every order.""Oprócz stałej oferty zaprezentowanej poniżej realizujemy również zamówienia specjalne zgodne z indywidualnymi potrzebami klienta. Ilość takiego zamówienia jest za każdym razem uzgadniania z odbiorcą.": "In addition to the permanent offer presented below we also take special orders in line with individual customer needs. The amount of such an order is each time agreed with the customer.",
-    "has been on the market since 1989.": "har vært på markedet siden 1989.",
+
+    "exists on the market since 1989.": "har vært på markedet siden 1989.",
     "Since that time, our socks won the sympathies of many people from all over Polish, thanks to the high quality of yarn (combed cotton and bamboo fiber) used for the manufacture of our products. Wide range of patterns and colors, and the ability to choose the size of the socks allows us to hit the tastes of each client.": "Siden den gang, har våre sokker vunnet sympati hos polakker over hele landet, takket være den høye kvalitet av garn (kjemmet bomull og bambus fiber) brukt til produksjon av våre produkter. Stort utvalg av mønstre og farger, mulighet til å velge størrelse på sokkene, gir også oss mulighet til å treffe kundens smak.",
-    "We use modern Italian manufacturing machinery, which allows us to meet today's fashion trends and realize every order.": "Vi bruker moderne italiensk produksjons-utstyr, som gjør oss i stand til å møte dagens trender og realisere en hver bestilling.""In addition to the permanent offer presented below we also take special orders in line with individual customer needs. The amount of such an order is each time agreed with the customer": "I tillegg til det faste tilbudet, tar vi også i mot spesielle bestillinger fra den individuelle kundes behov. Mengden av en slik bestilling, blir hver gang avtalt med kunden."
+    "We use modern Italian manufacturing machinery, which allows us to meet today's fashion trends and realize every order.": "Vi bruker moderne italiensk produksjons-utstyr, som gjør oss i stand til å møte dagens trender og realisere en hver bestilling.",
+    "In addition to the permanent offer presented below we also take special orders in line with individual customer needs. The amount of such an order is each time agreed with the customer.": "I tillegg til det faste tilbudet, tar vi også i mot spesielle bestillinger fra den individuelle kundes behov. Mengden av en slik bestilling, blir hver gang avtalt med kunden."
 }
