--- a/app/translations/pl.json
+++ b/app/translations/pl.json
@@ -52,5 +52,23 @@
     "No children or minors work in the production.": "Przy produkcji nie pracują dzieci, ani osoby nieletnie.",
     "The production is based on natural raw materials (cotton yarn and bamboo), which minimizes the negative impact on the environment.": "Produkcja oparta jest na surowcach naturalnych (przędza bawełniana i bambusowa), co minimalizuje negatywny wpływ na środowisko.",
     "European product.": "Produkt europejski.",
-    "Made in Poland.": "Wyprodukowane w Polsce."
+    "Made in Poland.": "Wyprodukowane w Polsce.",
+
+    "Bamboo Short Socks": "Stopki Bambusowe",
+    "Bamboo Frotte Socks": "Bambus Frotte",
+    "Short Socks": "Stopki",
+    "Under Knee Socks": "Podkolanówki",
+    "Above Knee Socks": "Zakolanówki",
+    "Sport Socks": "Sportowe",
+    "Sport 3/4 Socks": "Sportowe 3/4",
+    "Pressure-free without rubber Socks": "Bezuciskowe bez gumki",
+    "Pressure-free Socks": "Bezuciskowe",
+    "Half-Frotte 3/4 Socks": "Półfrotte 3/4",
+    "Half-Frotte Socks": "Półfrotte",
+    "Frotte Socks": "Frotte",
+
+    "exists on the market since 1989.": "istnieje na rynku od 1989 roku.",
+    "Since that time, our socks won the sympathies of many people from all over Polish, thanks to the high quality of yarn (combed cotton and bamboo fiber) used for the manufacture of our products. Wide range of patterns and colors, and the ability to choose the size of the socks allows us to hit the tastes of each client.": "Od tego czasu nasze skarpety zdobyły sympatie wielu ludzi z całej Polski, dzięki najwyższej jakości przędzy(bawełny czesanskowej oraz włókna bambusowego) używanej do wyrobu naszych produktów. Szeroki asortyment wzorów i kolorów oraz możliwość wyboru rozmiaru skarpet pozwala nam trafić w gust każdego klienta.",
+    "We use modern Italian manufacturing machinery, which allows us to meet today's fashion trends and realize every order.": "Korzystamy z nowoczesnych maszyn dziewiarskich produkcji włoskiej, co pozwala nam sprostać współczesnym trendom mody oraz zrealizować każde zamówienie.",
+    "In addition to the permanent offer presented below we also take special orders in line with individual customer needs. The amount of such an order is each time agreed with the customer.": "Oprócz stałej oferty zaprezentowanej poniżej realizujemy również zamówienia specjalne zgodne z indywidualnymi potrzebami klienta. Ilość takiego zamówienia jest za każdym razem uzgadniania z odbiorcą."
 }
