--- a/app/translations/pl.json
+++ b/app/translations/pl.json
@@ -12,41 +12,53 @@
     "Company Dziewiarstwo Maszynowe Mieczysław Klimczak exists on market since 1989.": "Firma Dziewiarstwo Maszynowe Mieczysław Klimczak istnieje na rynku od 1989 roku.",
     "Learn more": "Dowiedz się wiecej",
 
-    "Suit Socks": "Skarpety Garniturowe",
-    "Men Socks": "Skarpety Męskie",
-    "Women Socks": "Skarpety Damskie",
-    "Van Socks": "Skarpety Awangarda",
-    "Bamboo Socks": "Skarpety Bambusowe",
-    "Category_7": "Podkolanówki/Zakolanówki",
-
+    "Categories": "Kategorie",
+    "All": "Wszystkie",
     "Men": "Męskie",
     "Women": "Damskie",
     "Sport": "Sportowe",
+    "Bamboo": "Bambusowe",
+    "Short": "Stopki",
+    "Knee": "Podkolanówki/Zakolanówki",
+    "Youth": "Młodzieżowe",
+    "Pressure-free": "Bezuciskowe",
+
+    "Suit Socks": "Skarpety Garniturowe",
+    "Men Socks": "Skarpety Męskie",
+    "Women Socks": "Skarpety Damskie",
+    "Bamboo Socks": "Skarpety Bambusowe",
+
+    "See more": "Zobacz więcej",
+    "Show": "Pokazuje",
+    "from": "z",
+    "available": "dostępnych",
 
     "Amount in package": "Ilość w paczce",
     "Go back": "Wróć",
 
+    "Different patterns.": "Różne wzory.",
     "Perfectly fit suit.": "Perfekcyjnie pasują do garnituru.",
     "Socks ideal for a suit and not only.": "Skarpety idealne do garnituru i nie tylko.",
     "Made from high quality combed cotton.": "Wykonane z wysokiej jakości bawełny czesankowej.",
-    "True comfort and elegance.": "Prawdziwa wygoda i elegancja.",
-    "Available in rich colors.": "Dostępne w bogatej kolorystyce.",
     "Flat seam and wide ribbing causing no pinching.": "Płaski szew i szeroki nieuciskający ściągacz.",
     "Socks with silver ions.Socks with silver ions.": "Skarpety z jonami srebra.",
     "Made of high quality bamboo yarn.": "Wykonane z wysokiej jakości przędzy bambusowej.",
-    "Comfortable to wear.": "Wygodne w noszeniu.",
-    "Flat seam.": "Płaski szew.",
     "Wide ribbing causing no pinching.": "Szeroki nieuciskający ściągacz.",
+    "Additional ribbing on the midfoot provides enhanced sock stabilization.": "Dodatkowy ściągacz na śródstopiu zapewnia zwiększoną stabilizację skarpety.",
+    "Additional silver ions increase the antiperspirant and antimicrobial properties.": "Dodatkowe jony srebra zwiększają właściwości przeciwpotne i przeciwbakteryjne.",
+    "Long sports puller.": "Długi sportowy ściągacz.",
+    "Without rubber in the waist band.": "Bez gumki w ściągaczu.",
 
     "Black": "Czarny",
-    "Gray": "Szary",
-    "Dark gray": "Stalowy",
-    "Dark jeans": "Granatowy",
+    "Ashen": "Popiel",
+    "Steel": "Stalowy",
+    "Navy blue": "Granatowy",
     "Jeans": "Jeans",
     "Bronze": "Brązowy",
     "Beige": "Beżowy",
     "Graphite": "Grafitowy",
     "White": "Biały",
+    "More colors available on special order": "Inne kolory dostępne na specjalne zamówienie",
 
     "We declare that the production of our socks are adhered to the law, in particular human rights.": "Oświadczamy, że przy produkcji naszych skarpet są przestrzegane przepisy prawa, a w szczególności Prawa człowieka.",
     "No children or minors work in the production.": "Przy produkcji nie pracują dzieci, ani osoby nieletnie.",
@@ -70,5 +82,8 @@
     "exists on the market since 1989.": "istnieje na rynku od 1989 roku.",
     "Since that time, our socks won the sympathies of many people from all over Polish, thanks to the high quality of yarn (combed cotton and bamboo fiber) used for the manufacture of our products. Wide range of patterns and colors, and the ability to choose the size of the socks allows us to hit the tastes of each client.": "Od tego czasu nasze skarpety zdobyły sympatie wielu ludzi z całej Polski, dzięki najwyższej jakości przędzy(bawełny czesanskowej oraz włókna bambusowego) używanej do wyrobu naszych produktów. Szeroki asortyment wzorów i kolorów oraz możliwość wyboru rozmiaru skarpet pozwala nam trafić w gust każdego klienta.",
     "We use modern Italian manufacturing machinery, which allows us to meet today's fashion trends and realize every order.": "Korzystamy z nowoczesnych maszyn dziewiarskich produkcji włoskiej, co pozwala nam sprostać współczesnym trendom mody oraz zrealizować każde zamówienie.",
-    "In addition to the permanent offer presented below we also take special orders in line with individual customer needs. The amount of such an order is each time agreed with the customer.": "Oprócz stałej oferty zaprezentowanej poniżej realizujemy również zamówienia specjalne zgodne z indywidualnymi potrzebami klienta. Ilość takiego zamówienia jest za każdym razem uzgadniania z odbiorcą."
+    "In addition to the permanent offer presented below we also take special orders in line with individual customer needs. The amount of such an order is each time agreed with the customer.": "Oprócz stałej oferty zaprezentowanej poniżej realizujemy również zamówienia specjalne zgodne z indywidualnymi potrzebami klienta. Ilość takiego zamówienia jest za każdym razem uzgadniania z odbiorcą.",
+
+    "Address": "Adres",
+    "Phone number": "Numer telefonu"
 }
