no translation added.

--- a/app/translations/no.json
+++ b/app/translations/no.json
@@ -55,11 +55,22 @@
     "Bamboo": "Bambus",
     "Knee": "Halvstrømpe/Lårstrømpe",
     "Pressure-free": "Pressfri",
-    "Zobacz więcej": "Details",
     "Details": "Detaljer",
-
-    "exists on the market since 1989.": "har vært på markedet siden 1989.",
+    "Displays 36 of 36 available.": "Viser 36 av 36 tilgjengelige.",
+    "has been on the market since 1989.": "har vært på markedet siden 1989.",
     "Since that time, our socks won the sympathies of many people from all over Polish, thanks to the high quality of yarn (combed cotton and bamboo fiber) used for the manufacture of our products. Wide range of patterns and colors, and the ability to choose the size of the socks allows us to hit the tastes of each client.": "Siden den gang, har våre sokker vunnet sympati hos polakker over hele landet, takket være den høye kvalitet av garn (kjemmet bomull og bambus fiber) brukt til produksjon av våre produkter. Stort utvalg av mønstre og farger, mulighet til å velge størrelse på sokkene, gir også oss mulighet til å treffe kundens smak.",
     "We use modern Italian manufacturing machinery, which allows us to meet today's fashion trends and realize every order.": "Vi bruker moderne italiensk produksjons-utstyr, som gjør oss i stand til å møte dagens trender og realisere en hver bestilling.",
-    "In addition to the permanent offer presented below we also take special orders in line with individual customer needs. The amount of such an order is each time agreed with the customer.": "I tillegg til det faste tilbudet, tar vi også i mot spesielle bestillinger fra den individuelle kundes behov. Mengden av en slik bestilling, blir hver gang avtalt med kunden."
+    "In addition to the permanent offer presented below we also take special orders in line with individual customer needs. The amount of such an order is each time agreed with the customer": "I tillegg til det faste tilbudet, tar vi også i mot spesielle bestillinger fra den individuelle kundes behov. Mengden av en slik bestilling, blir hver gang avtalt med kunden.",
+    "Bamboo Short Socks": "Bambus Korte Sokker",
+    "Bamboo Frotte Socks": "Bambus Frotté Sokker",
+    "Short Socks": "Korte Sokker",
+    "Under Knee Socks": "Halvstrømpe",
+    "Above Knee Socks": "Helstrømpe",
+    "Sport Socks": "Sport Sokker",
+    "Sport 3/4 Socks": "Sport 3/4 Sokker",
+    "Pressure-free without rubber Socks": "Trykkfri uten strikk",
+    "Pressure-free Socks": "Trykkfri",
+    "Half-Frotte 3/4 Socks": "Halv Frotté 3/4",
+    "Half-Frotte Socks": "Halv Frotté",
+    "Frotte Socks": "Frotté Sokker"
 }
