No translation improved.

--- a/app/translations/no.json
+++ b/app/translations/no.json
@@ -72,5 +72,19 @@
     "Pressure-free Socks": "Trykkfri",
     "Half-Frotte 3/4 Socks": "Halv Frotté 3/4",
     "Half-Frotte Socks": "Halv Frotté",
-    "Frotte Socks": "Frotté Sokker"
+    "Frotte Socks": "Frotté Sokker",
+    "See more": "Finn ut mer",
+    "Youth": "For unge",
+    "Show": "Vis",
+    "from": "av",
+    "available": "tilgjengelige",
+    "Different patterns.": "Ulike mønstre.",
+    "Steel": "Stål farge",
+    "Navy blue": "Marineblå",
+    "More colors available on special order": "Flere farger tilgjengelig på spesialbestilling",
+    "Additional ribbing on the midfoot provides enhanced sock stabilization.": "Ekstra ribbing på midfoot gir forbedret sokk stabilisering.",
+    "Long sports puller.": "Long sport avtrekker.",
+    "Additional silver ions increase the antiperspirant and antimicrobial properties.": "Takket være bruken av sølvioner har antibakterielle - anti svette egenskaper økt",
+    "Perfect for people with blood circulation problems.": "Perfekt for folk med problemer med blodsirkulasjonen.",
+    "Without rubber in the waist band.": "Uten strikk i midje."
 }
